Closed
Bug 568786
Opened 12 years ago
Closed 12 years ago
"Assertion failure: !(attrs & (JSPROP_GETTER | JSPROP_SETTER))," with Object.defineProperty
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla2.0b2
Tracking | Status | |
---|---|---|
blocking2.0 | --- | beta3+ |
People
(Reporter: gkw, Assigned: Waldo)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
2.52 KB,
patch
|
brendan
:
review+
|
Details | Diff | Splinter Review |
function f() { this.e = function() {}; Object.defineProperty(this, "e", ({ get: eval })); } new f(); asserts js debug shell on TM tip with -j at Assertion failure: !(attrs & (JSPROP_GETTER | JSPROP_SETTER)), at ../jsobj.cpp:2347
![]() |
Reporter | |
Comment 1•12 years ago
|
||
autoBisect shows this is probably related to the following changeset: The first bad revision is: changeset: 42719:3aec4f836bb5 user: Brendan Eich date: Mon May 24 10:48:32 2010 -0700 summary: Fix getter vs. method pointer issues (567066, r=jwalden).
Blocks: 567066
blocking2.0: --- → ?
![]() |
Reporter | |
Comment 2•12 years ago
|
||
Whoops, wrong bug number was in the commit message, it should be bug 567606 instead.
Updated•12 years ago
|
blocking2.0: ? → beta1+
Assignee | ||
Updated•12 years ago
|
Assignee: general → jwalden+bmo
Updated•12 years ago
|
blocking2.0: beta1+ → beta2+
![]() |
Reporter | |
Comment 3•12 years ago
|
||
Doesn't need -j to assert after a recheck, so probably not TM.
Summary: TM: "Assertion failure: !(attrs & (JSPROP_GETTER | JSPROP_SETTER))," with Object.defineProperty → "Assertion failure: !(attrs & (JSPROP_GETTER | JSPROP_SETTER))," with Object.defineProperty
Assignee | ||
Comment 4•12 years ago
|
||
Attachment #458385 -
Flags: review?(brendan)
Comment 5•12 years ago
|
||
Comment on attachment 458385 [details] [diff] [review] Assertbotch D'oh! Thanks. /be
Attachment #458385 -
Flags: review?(brendan) → review+
Updated•12 years ago
|
blocking2.0: beta2+ → beta3+
Assignee | ||
Comment 6•12 years ago
|
||
http://hg.mozilla.org/tracemonkey/rev/bf46bf68aef1
Status: NEW → ASSIGNED
OS: Mac OS X → All
Hardware: x86 → All
Whiteboard: fixed-in-tracemonkey
Target Milestone: --- → mozilla2.0b2
Comment 7•12 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/bf46bf68aef1
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment 8•10 years ago
|
||
Automatically extracted testcase for this bug was committed: https://hg.mozilla.org/mozilla-central/rev/efaf8960a929
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•