Bug 568786 - Fix a bad assertion defining an accessor property over a method-valued property.  r=brendan